--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,14 +5,17 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Real Time Web</title>
-  <link rel="stylesheet" href="styles/styles.css">
+  <link rel="stylesheet" href="/public/styles/styles.css">
 </head>
 <body>
-
+    <header>
+        <%- include('partials/header.ejs'); %>
+    </header>
+    
   <main>
 
   </main>
   
-  <script src="script/script.js"></script>
+  <script src="/public/script/script.js"></script>
 </body>
 </html>
