--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,12 +5,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Real Time Web</title>
-  <link rel="stylesheet" href="/public/styles/styles.css">
-  
+  <link rel="stylesheet" href="/styles/styles.css">
+  <script src="/scripts/script.js" defer></script>
 </head>
 <body>
     <header>
-        <%- include('partials/header.ejs'); %>
+
     </header>
     
   <main>
@@ -37,7 +37,7 @@
         </main>
       
         <script src="/socket.io/socket.io.js"></script>
-        <script src="/scripts/script.js"></script>
+     
   
 
 </body>
