--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Real Time Web</title>
   <link rel="stylesheet" href="/styles/styles.css">
-  <script src="/scripts/script.js" defer></script>
+  <script src="/script/script.js" defer></script>
+
 </head>
 <body>
     <header>
