oke dus offline werkt niet, maar alex wel!!!!

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,15 +27,21 @@
             </form>
           </section>
       
+
           <section>
-      
             <ul></ul>
             <form class="message-input">
               <input type="text" id="message-input" autocomplete="off" placeholder="Type your message..">
               <button type="submit" id="message-button"><span>Send</span></button>
             </form>
+            <p id="error"></p>
+          </section>
+
+          <section>
+            
           </section>
         </main>
+    
       
         <script src="/socket.io/socket.io.js"></script>
      
