extra functionaliteiten erbijjjj

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -58,13 +58,27 @@ main {
 /********/
 /* FORM */
 /********/
+main section:nth-child(3) {
+    display: block;
+}
+
+main section:nth-child(3).hidden {
+    display: none;
+}
+
 main section:nth-child(3) form {
     position: absolute;
     bottom: 0;
     left: 0;
     width: 100%;
 }
+main section:nth-child(2){
+    display: block;
+}
+main section:nth-child(2).hidden{
+    display:none;
 
+}
 main section:nth-child(3) ul {
     display: flex;
     flex-direction: column;
