--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,17 +18,21 @@
     <body>
         <h1>Web Girlies</h1>
         <main>
+
+          
           <section>
             <p id="time"></p>
           </section>
           <section>
             <form>
               <input type="text" id="username-input" placeholder="Enter your username">
+              <button class="create-user-btn">Join chat</button>
             </form>
           </section>
-      
-
+          
+          
           <section>
+            <button class="back-btn">go back</button>
             <ul></ul>
             <form class="message-input">
               <input type="text" id="message-input" autocomplete="off" placeholder="Type your message..">
@@ -38,7 +42,7 @@
           </section>
 
           <section>
-            
+
           </section>
         </main>
     
