--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,6 +25,7 @@
           </section>
           <section>
             <form>
+              <div class="feedback"></div>
               <input type="text" id="username-input" placeholder="Enter your username">
               <button class="create-user-btn">Join chat</button>
             </form>
