--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,25 +16,29 @@
     
   <main>
     <body>
-        <h1>Web Girlies</h1>
+        <h1>Angrezi</h1>
         <main>
 
-          
+          <!-- section om mijn tijd te laten zien -->
           <section>
             <p id="time"></p>
           </section>
+
+          <!-- section voor mijn username en de join chat button -->
           <section>
             <form>
-             
               <input type="text" id="username-input" placeholder="Enter your username">
               <button class="create-user-btn">Join chat</button>
             </form>
+            <div class="popup">
+              <p>This chat is English only.</p>
+              <p>We do not tolerate profanity words!!</p>
+            </div>
           </section>
           
-          
+          <!-- section voor mijn chat app -->
           <section>
             <button class="back-btn">go back</button>
-            <div class="feedback"></div>
             <ul></ul>
             <form class="message-input">
               <input type="text" id="message-input" autocomplete="off" placeholder="Type your message..">
@@ -43,9 +47,7 @@
             <p id="error"></p>
           </section>
 
-          <section>
-
-          </section>
+          
         </main>
     
       
