--- a/views/index.ejs
+++ b/views/index.ejs
@@ -47,7 +47,9 @@
             <p id="error"></p>
           </section>
 
-          
+          <section>
+            
+          </section>
         </main>
     
       
