--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,7 @@
     
   <main>
     <body>
-        <h1>Angrezi</h1>
+        <h1>Angrezi?</h1>
         <main>
 
           <!-- section om mijn tijd te laten zien -->
